// 用户模块的定义

syntax="proto3";

package user;

option go_package="bytedancemall/user/proto;user";

service UserService {
    rpc Register(RegisterReq) returns (RegisterResp) {}
    rpc Login(LoginReq) returns (LoginResp) {}
}

message RegisterReq {
    string email = 1;
    string password = 2;
}

message RegisterResp {
    bool result = 1;
    uint64 user_id = 2;
}

message LoginReq {
    string email = 1;
    uint64 user_id = 2;
    string password = 3;
}

message LoginResp {
    bool result = 1;
    string token = 2;
}